# weather_app

./: .gitignore  README.md  docker-compose.yml  example_env
weather/: Dockerfile  pyproject.toml
weather/main/: admin.py  models.py  serializers.py  urls.py  views.py
weather/main/migrations/: 0001_initial.py
weather/main/templates/: weather.html
weather/weather/: settings.py
weather/weather/settings/: __init__.py  db.py  settings.py
