[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Vladimir <vovchikp.1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
